crates/compiler/cypress/tests/snapshots/test_parse__simple_assign_decl.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "abc = def\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            Ident=>LowerIdent@2
        EndAssignDecl)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("abc"), Ident("def"))

[=== formatted below ===]

