crates/compiler/cypress/tests/snapshots/test_parse__simple_nested_assign_decl.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "abc =\n    def = ghi\n    jkl\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginBlock
                (BeginAssignDecl
                    Ident=>LowerIdent@2
                    InlineAssign=>OpAssign@3
                    Ident=>LowerIdent@4
                EndAssignDecl)
                HintExpr
                Ident=>LowerIdent@5
            EndBlock)
        EndAssignDecl)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("abc"), Block([Assign(Ident("def"), Ident("ghi")), Ident("jkl")]))

[=== formatted below ===]

