crates/compiler/cypress/tests/snapshots/test_parse__single_arg_closure_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\\a -> 42\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginLambda
            Ident=>LowerIdent@1
            InlineLambdaArrow=>OpArrow@2
            Num=>Int@3
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Lambda([Ident("a")], IntBase10("42"))

[=== formatted below ===]

