crates/compiler/cypress/tests/snapshots/test_parse__single_underscore_closure_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\\_ -> 42\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginLambda
            Underscore=>Underscore@1
            InlineLambdaArrow=>OpArrow@2
            Num=>Int@3
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Lambda([Underscore("_")], IntBase10("42"))

[=== formatted below ===]
\_ -> 42
