crates/compiler/cypress/tests/snapshots/test_parse__space_before_colon_full.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "app \"example\"\n    packages { pf : \"path\" }\n    imports [ pf.Stdout ]\n    provides [ main ] to pf\n\nmain = Stdout.line \"Hello\"\n"
---
(BeginFile
    (BeginHeaderApp
        String=>String@1
        (BeginCollection Ident=>LowerIdent@4 String=>String@6 EndCollection)
        (BeginCollection (* Ident=>LowerIdent@10 DotModuleUpperIdent) EndCollection)
        (BeginCollection Ident=>LowerIdent@15 EndCollection)
        Ident=>LowerIdent@18
    EndHeaderApp)
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@19
            InlineAssign=>OpAssign@20
            (*
                (* ModuleName=>UpperIdent@21 DotModuleLowerIdent)
                InlineApply=>NoSpaceDotLowerIdent@22
                String=>String@23
            EndApply)
        EndAssign)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("main"), Apply(ModuleLowerName("Stdout", ".line"), [String("\"Hello\"")]))

[=== formatted below ===]

